--- a/source/stylesheets/components/_header.css
+++ b/source/stylesheets/components/_header.css
@@ -8,6 +8,7 @@
 }
 
 .Header .container {
+  height: 100%;
   display: flex;
   justify-content: space-between;
 }
